@@ -1,3 +1,8 @@
+2006-04-30  Alasdair Allan <aa@astro.ex.ac.uk>
+
+       * VOEvent.pm: Modified to handle <VOEvent ivorn=""> and to have
+         some backwards support for <VOEvent id="">. 
+
 2006-03-21  Alasdair Allan <aa@astro.ex.ac.uk>
 
        * VOEvent.pm: Fixed <WhereWhen type="simple"> representation to
